# Technopark_c-cpp

./: .travis.yml  CMakeLists.txt  Makefile  README.md  test_data.txt
project/data/case1/: in.txt  out.txt
project/include/: data_management.h  operations.h
project/src/: data_management.c  main.c  operations.c
project/testing/data/case1/: in.txt
project/testing/include/: utils.h
project/testing/src/: main.cpp  management_tests.cpp  operations_tests.cpp
src/: comment_data.c  comment_data_parallel.c  comment_data_sequential.c  date_utils.c  main.c  randgen.c  random_data_gen.c  test.c  utils.c
src/include/: comment_data.h  date_utils.h  random_data_gen.h  utils.h
